# JingCraft

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  app.js  index.html  index.js  main.js  package.json  test.c
app/: package.json
include/: render.h
jingcraft/: CMakeLists.txt  main.cpp
jingcraft/renderer/: CMakeLists.txt  render.h  render_types.h  renderer.cpp  renderer2.cpp
jingcraft/renderer/include/: render.h
jingcraft/renderer/renderables/: renderables.h  triangle.cpp
jingcraft/world/: CMakeLists.txt  world.cpp  world.h
jingcraft/world/include/: world.h
jingcraft/world/src/: world.cpp
lib/: index.js  proto.js
lib/player/: index.js  proto.js
lib/render/: index.js
lib/world/: index.js  proto.js
shell/: Gruntfile.js  package.json
src/: main.cpp  render.cpp
